--- a/point/vivantDansLeGraphe/index.html
+++ b/point/vivantDansLeGraphe/index.html
@@ -40,11 +40,11 @@
         <a-mixin id="ligneTemps" geometry="height:0.05;width:0.05;depth:0.5"
                  material="color:#ffffff"></a-mixin>
         <!-- Panneau hover pays du graphe -->
-        <a-mixin id="ui-hover-pays" position="0 0 0"
-                 slice9="width:3.2;height:0.95;bottom:43.81;left:20;
+        <a-mixin id="ui-hover-pays" position="0 1.25 0"
+                 slice9="width:3.2;height:1.5;bottom:43.81;left:20;
                          right:43;top:20;src:img/slice9_texture/tooltip.png;
-                         color:white;padding:0.02;
-                         side:double;"></a-mixin>
+                         color:white;padding:0.02;transparent:false;
+                         side:front;"></a-mixin>
 
         <!-- Ui texte -->
         <a-mixin id="textContinent"
@@ -294,7 +294,7 @@
           </a-entity>
         </a-entity>
         <a-entity id="rhand" data-hover-en-cours="false" laser-controls="hands:right"
-
+        raycaster="objects:.sphereGraphe,.panneauSelectionPays"
         line="color: #22D1EE; opacity: 0.75"></a-entity><!-- teleport-controls="type:parabolic;" changement-outil ligne-du-temps="event:click;mixin:ligneTemps"-->
       </a-entity>
 
@@ -332,9 +332,9 @@
       <a-sphere scale="1 1 1" material="repeat:1.0 1.0; src: #gapminder; shader: standard; side: double;"
                 position="-10 2 2.125" rotation="0 90 0" geometry="primitive:circle;radius:1.04">
         <a-text value="Life Expectency and Incomes/Years since 1915 to 2015"
-                position="1.224 0 0" text="color:#d9ad28;wrapCount:20.68;side: double;"></a-text>
+                position="1.224 0 0" text="color:#000000;wrapCount:20.68;side: double;"></a-text>
         <a-text value="Choose countries by clicking on them and witness the result on the graph on your right."
-                position="1.8 -1.8 0" text="color:#d9ad28;wrapCount:25.68;side: double;align:center;"></a-text>
+                position="1.8 -1.8 0" text="color:#000000;wrapCount:25.68;side: double;align:center;"></a-text>
       </a-sphere>
 
       <!-- Instruction -->
@@ -342,7 +342,7 @@
                     tabSize: 0; width: 5;
                     baseline: top; wrapCount: 12;
                     letterSpacing: 0.3;
-                    align:center;color:#d9ad28;
+                    align:center;color:#000000;
                     anchor:center;zOffset:0;
                     baseline:center;value:Use your feet on the timeline to see the data move.;"
                     position="0 1.5 -10"></a-text>
@@ -350,7 +350,7 @@
                     tabSize: 0; width: 7;
                     baseline: top; wrapCount: 20;
                     letterSpacing: 0.3;
-                    align:center;color:#d9ad28;
+                    align:center;color:#000000;
                     anchor:center;zOffset:0;
                     baseline:center;value:Use your pointer to choose a country from the menu on your left hand, and if you hover over a sphere you'll see more details about the country.;"
                     position="0 1.5 10" rotation="0 180 0"></a-text>
