Graphe modifier, le rayon représente la population du pays.

--- a/point/egocenter_graphe/index.html
+++ b/point/egocenter_graphe/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>VivantDansLeGraphe</title>
-    <meta name ="description" content="VivantDansLeGraphe - A-Frame">
+    <title>Egocenter</title>
+    <meta name ="description" content="Egocenter - A-Frame">
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
@@ -25,7 +25,7 @@
     <script src="js/graphe-2D-creation.js"></script>
   </head>
   <body>
-    <a-scene stats environment="grid: none; dressingUniformScale: false;
+    <a-scene  environment="grid: none; dressingUniformScale: false;
                                 dressingScale: 0; dressingAmount: 0;
                                 groundYScale: 0;ground: flat; skyColor: #ffffff;
                                 active: true;gridColor: #ffffff;
